talk handout strassman done

--- a/Zahlentheorie/P-adische Zahlen/Talk/document.tex
+++ b/Zahlentheorie/P-adische Zahlen/Talk/document.tex
@@ -4,8 +4,7 @@
 \usepackage{geometry}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
-\usepackage{tikz-cd}
-
+%\usepackage{tikz-cd}
 \usepackage{graphicx}
 \usepackage[colorlinks = true,
 linkcolor = blue,
@@ -62,15 +61,15 @@ anchorcolor = blue]{hyperref}
 	\Huge{\textbf{Talk 9: Strassman's theorem and the Logarithm function}}%Title spot
 \end{center}
 	\begin{minipage}{0.45\textwidth}%This helps you write on one half of a page and may be helps you conserve some space
-	\section{Sample section}%\section{} creates the section you want
-			In this talk, we would like to study blah blah blah... They are defined as 
+	\section{Revision}%\section{} creates the section you want
+			In this talk, we would like to study blah blah blah... They are defined as asd
 			\begin{defi}%\begin{defi}..\end{defi} creates a definition
 			  ...
-			  only if $$something gilt$$
 			\end{defi}
 		We prove the following result
 		\begin{thm}%this is for creating theorems
-			...
+		  Strassman's Theorem: \newline
+		  Let
 		\end{thm}
 		
 		
