--- a/Zahlentheorie/P-adische Zahlen/Talk/talk.tex
+++ b/Zahlentheorie/P-adische Zahlen/Talk/talk.tex
@@ -37,6 +37,10 @@
 
 \begin{document}
 \section{Revision}
+\begin{rem}\cite[Prop. 5.4.1]{Gou}
+  Let $f(X) \in \Bbb Q_{p}[[X]]$ be a power series, then the radius of convergence is
+  $$\rho = \frac{1}{\displaystyle \limsup_{n \to \infty}\sqrt[n]{|a_{n}|}}$$
+\end{rem}
 \begin{prop}{\cite[Prop. 5.1.4]{Gou}}
   Let $b_{ij} \in \Bbb Q_{p}$ and suppose $\forall i: \lim_{j \to \infty}b_{ij} = 0$ and $lim_{i \to \infty}b_{ij} = 0$ uniformly in $j$, then both series
   $\sum_{i=0}^{\infty}\left(\sum_{j=0}^{\infty} b_{ij} \right) \text{ and } \sum_{j=0}^{\infty}\left(\sum_{i=0}^{\infty} b_{ij} \right)$
@@ -94,44 +98,66 @@ then the function $f$ has at most $N$ zeros.
           since $\forall j \geq n:c_{nj} = 0$, we need to only consider when $n > j$ so its equal to
           $$= (x-\alpha) \sum_{j=0}^{\infty} \sum_{n=j+1}^{\infty} a_{n}x^{j}\alpha^{n-1-j} = (x-\alpha) \sum_{j=0}^{\infty} x^{j} \underbrace{\sum_{n=0}^{\infty} a_{n+j+1}\alpha^{n}}_{=:b_{j}}$$
           $$= (x-\alpha)g(x),\quad g(x):=\sum_{j=0}^{\infty}b_{j}x^{j}$$
+          Now we check if $g(X)$ fits the assumptions of the theorem, to use the induction steps. We need to show that $g(X)$ is non zero and that $b_{j} \to 0$
   \end{itemize}
 \end{proof}
-\begin{Cor}
+\begin{Cor} %5.6.2 in the book
   Let $f(X) = \sum a_{n}x^{n}$ be a non-zero power series which converges on $\Bbb Z_{p}$, and let $\alpha_{1}, ..., \alpha_{m} \in \Bbb Z_{p}$ be the roots of $f(X)$ in $\Bbb Z_{p}$, then there exists another power series $g(X)$ which also converges on $\Bbb Z_{p}$ but has no zeros in $\Bbb Z_{p}$, for which
   $$f(X) = \left(\prod_{i=1}^{m}(X-\alpha_{i})\right)g(X)$$
-  \begin{proof}
-
-  \end{proof}
 \end{Cor}
+\begin{proof}
+  Clear from the proof of the theorem.
+\end{proof}
 
 \begin{Cor}
   Let $f(X) = \sum a_{n}x^{n}$ be a non-zero power series which converges on $p^{m}\Bbb Z_{p}$, for some $m \in \Bbb Z$. Then $f(X)$ has a finite number of roots in $p^{m} \Bbb Z_{p}$.
-  \begin{proof}
-
-  \end{proof}
 \end{Cor}
+\begin{proof}
+
+\end{proof}
 \begin{Cor}
   Let $f(X) = \sum a_{n}x^{n}$ and $g(X) = \sum b_{n}X^{n}$ be two p-adic power series which converge in a disc $p^{m}\Bbb Z_{p}$. If there exist infinitely many numbers $\alpha \in p^{m}Z_{p}$ such that $f(\alpha) = g(\alpha)$, then $a_{n} = b_{n}, \forall n \geq 0$
-
-  \begin{proof}
-
-  \end{proof}
 \end{Cor}
 \begin{Cor}
   Let $f(X) = \sum a_{n}x^{n}$ be a p-adic power series which converges in some disc $p^{m}\Bbb Z_{p}$. If the function $p^{m}\Bbb Z_{p} \to \Bbb Q_{p}, x \mapsto f(x)$ is periodic, that is, $\exists \pi \in p^{m}\Bbb Z_{p} : f(x + \pi) = f(x), \forall \in p^{m}\Bbb Z_{p}$ then $f(X)$ is constant.
-
-  \begin{proof}
-
-  \end{proof}
 \end{Cor}
 \begin{Cor}
   Let $f(X) = \sum a_{n}x^{n}$ be a p-adic power series which is entire, that is, $f(x)$ converges $\forall x \in \Bbb Q_{p}$. Then $f(X)$ has at most countably many zeros. Furthermore, if the set of zeros is not finite then the zeros form a sequence $\alpha_{n}$ with $|\alpha_{n}| \to \infty$.
-  \begin{proof}
-
-  \end{proof}
 \end{Cor}
 \section{The $p$-adic Logarithm Function}
+\begin{defi}[Formal power series for the logarithm]   $$\mathbf{log}(1+X) = \sum_{n=1}^{\infty} (-1)^{n+1}\frac {X^{n}}{n} = X - \frac{X^{2}}{2} + \frac{X^{3}}{3} \mp \cdots \in \Bbb Q_{p}[[X]]$$
+  Since the coefficients are in $\Bbb Q$ we can consider it as a power series with coefficients in $\Bbb Q_{p}$
+\end{defi}
+\begin{rem}
+We use $\mathbf{log}$ when referring to the formal power series, not the logarithm function itself.
+\end{rem}
+\begin{prop} $\mathbf{log}(1+X)$ converges if and only if $|x| < 1$
+\end{prop}
+\begin{proof}
+% TODO
+\end{proof}
+\begin{defi}Let $U_{1} = B(1,1) = \{x \in \Bbb Z_{p} : |x-1| < 1\} = 1+p\Bbb Z_{p}$, we define the $p$-adic logarithm of $x \in U_{1}$ as:
+  $$\log_{p}(x) = \mathbf{log}(1+(x-1)) = \sum_{n=1}^{\infty} (-1)^{n+1}\frac {(x-1)^{n}}{n}$$
+In order to be able to call it a logarithm, it has to fill the usual logarithmic property:
+\end{defi}
+\begin{prop}
+  Let $a, b \in 1+p\Bbb Z_{p}$, then we have
+  $$\log_{p}(ab) = \log_{p}(a) + \log_{p}(b)$$
+\end{prop}
+\begin{proof}
+  Let $x, y \in p\Bbb Z_{p}$ such that $a= 1+x, b =1+y$, and define for $x \in \Bbb pZ_{p}$
+  $$f(x) = \log_{p}(1+x) = \sum_{n \geq 1}(-1)^{n+1}\frac {x^{n}}{n}$$
+  % TODO
+\end{proof}
 \section{Roots of Unity}
+\begin{prop}
+  For $p \neq 2$ we have $\log_{p}(x)=0 \iff x=1$ and for $p = 2$, we have $\log_{p}(x)=0 \iff x= \pm 1$.
+\end{prop}
+\begin{proof}
+  We know that $\log_{p}(x)$ converges only for $x \in p\Bbb Z_{p}$, not in $\Bbb Z_{p}$, but we can do a change of variables like in Corollary 2.5
+  % TODO
+\end{proof}
+
 \begin{thebibliography}{widest-label} % References are listed here
 
 	\bibitem[Gou]{Gou}%You can add more refernces by \bibitem command
